# Capstone_project

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
benchmarks/: run_benchmark.py
benchmarks/baselines/: langchain_rag.py  spark_gpt4.py
benchmarks/tasks/: classification.py  ner.py  relation_extraction.py  summarization.py
deploy/docker/: Dockerfile.app  Dockerfile.ray  Dockerfile.scheduler  Dockerfile.worker  prometheus.yml
deploy/k8s/: kustomization.yaml  prometheus.yaml  ray-cluster.yaml  redis.yaml
docs/: RUNNING.md  architecture.md
docs/adr/: ADR-0001-why-ray-not-spark.md
docs/thesis/: outline.md  related-work.md  results-tracking.md
scripts/: download_datasets.sh  reproduce_results.sh  run_with_deepseek.py  smoke.py  start_local_cluster.sh  validate_phase1.py
src/reason_reduce/: __init__.py
src/reason_reduce/api/: __init__.py  dataframe.py  rdd.py
src/reason_reduce/config/: __init__.py  loader.py  models.yaml  thresholds.yaml
src/reason_reduce/feedback/: __init__.py  drift_detector.py  hitl.py  retraining.py
src/reason_reduce/ingestion/: __init__.py  batch.py  chunker.py  schema_infer.py  stream.py
src/reason_reduce/models/: __init__.py  api_adapter.py  calibration.py  lora_trainer.py  registry.py  vllm_client.py
src/reason_reduce/monitoring/: __init__.py  logger.py  metrics.py  tracing.py  wandb_tracker.py
src/reason_reduce/orchestration/: __init__.py  dag.py  load_balancer.py  router.py  scheduler.py
src/reason_reduce/reason/: __init__.py  api.py  context_propagator.py  embedding_store.py  partitioner.py  prompts.py  worker.py
src/reason_reduce/reduce/: __init__.py  aggregator.py  api.py  conflict.py  consensus.py  dempster_shafer.py  platt_calibration.py
tests/e2e/: test_full_pipeline_small.py
tests/integration/: test_distributed.py  test_reason_e2e.py  test_reason_reduce_e2e.py
tests/unit/: test_api_adapter.py  test_calibration.py  test_config.py  test_dempster_shafer.py  test_partitioner.py  test_registry.py
