[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reason-reduce"
dynamic = ["version"]
description = "A GenAI-Native Cloud Architecture for Probabilistic Big Data Processing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Rahul Agarwal", email = "m25de1040@iitj.ac.in"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ray[default]>=2.9",
    "vllm>=0.6",
    "sentence-transformers>=2.2",
    "redis>=5.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=23.2",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "opentelemetry-exporter-otlp>=1.22",
    "prometheus-client>=0.19",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "python-dotenv>=1.0",
    "wandb>=0.16",
    "dvc>=3.30",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "ruff>=0.1.9",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "py-spy>=0.3",
]
train = [
    "peft>=0.11",
    "auto-gptq>=0.7",
    "autoawq>=0.2",
    "lightgbm>=4.2",
]
eval = [
    "pyspark>=3.5",
    "openai>=1.6",
    "matplotlib>=3.8",
    "scienceplots>=2.1",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "codecarbon>=2.3",
]

[project.scripts]
reason-reduce = "reason_reduce.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/reason_reduce/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["notebooks/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks integration tests (deselect with '-m not integration')",
    "e2e: marks end-to-end tests (deselect with '-m not e2e')",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["reason_reduce"]
omit = ["*/_version.py"]

[tool.coverage.report]
# Target: 80% by end of Phase 1. Currently at scaffolding stage.
fail_under = 50
